tests/algorithms/x/C/graphs/check_bipatrite.error
compile: exit status 1
/workspace/mochi/tests/algorithms/x/C/graphs/check_bipatrite.c: In function ‘is_bipartite_bfs’:
/workspace/mochi/tests/algorithms/x/C/graphs/check_bipatrite.c:127:52: error: ‘graph_keys’ undeclared (first use in this function)
  127 |                     long long* __tmp0 = map_get_il(graph_keys, graph_vals, graph_lens, graph_len, curr, NULL);
      |                                                    ^~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/check_bipatrite.c:127:52: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/algorithms/x/C/graphs/check_bipatrite.c:127:64: error: ‘graph_vals’ undeclared (first use in this function)
  127 |                     long long* __tmp0 = map_get_il(graph_keys, graph_vals, graph_lens, graph_len, curr, NULL);
      |                                                                ^~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/check_bipatrite.c:127:76: error: ‘graph_lens’ undeclared (first use in this function)
  127 |                     long long* __tmp0 = map_get_il(graph_keys, graph_vals, graph_lens, graph_len, curr, NULL);
      |                                                                            ^~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/check_bipatrite.c:127:88: error: ‘graph_len’ undeclared (first use in this function)
  127 |                     long long* __tmp0 = map_get_il(graph_keys, graph_vals, graph_lens, graph_len, curr, NULL);
      |                                                                                        ^~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/check_bipatrite.c: In function ‘main’:
/workspace/mochi/tests/algorithms/x/C/graphs/check_bipatrite.c:155:40: error: initializer element is not constant
  155 |         static void* graph_vals[20] = {graph_vals_0, graph_vals_1, graph_vals_2, graph_vals_3};
      |                                        ^~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/check_bipatrite.c:155:40: note: (near initialization for ‘graph_vals[0]’)
/workspace/mochi/tests/algorithms/x/C/graphs/check_bipatrite.c:155:54: error: initializer element is not constant
  155 |         static void* graph_vals[20] = {graph_vals_0, graph_vals_1, graph_vals_2, graph_vals_3};
      |                                                      ^~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/check_bipatrite.c:155:54: note: (near initialization for ‘graph_vals[1]’)
/workspace/mochi/tests/algorithms/x/C/graphs/check_bipatrite.c:155:68: error: initializer element is not constant
  155 |         static void* graph_vals[20] = {graph_vals_0, graph_vals_1, graph_vals_2, graph_vals_3};
      |                                                                    ^~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/check_bipatrite.c:155:68: note: (near initialization for ‘graph_vals[2]’)
/workspace/mochi/tests/algorithms/x/C/graphs/check_bipatrite.c:155:82: error: initializer element is not constant
  155 |         static void* graph_vals[20] = {graph_vals_0, graph_vals_1, graph_vals_2, graph_vals_3};
      |                                                                                  ^~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/check_bipatrite.c:155:82: note: (near initialization for ‘graph_vals[3]’)
